# rustyAoc20

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/day_01/: mod.rs
src/day_02/: mod.rs
src/day_03/: mod.rs
src/day_04/: 04_in  mod.rs
src/day_05/: mod.rs
src/day_06/: mod.rs
src/day_07/: 07.pest
