[package]
name = "aoc20"
version = "0.1.0"
authors = ["Alex <ateilhet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_scan = "0.4.1"
regex = "1"
itertools = "0.9.0"
pest = "2.1.3"
pest_derive = "2.1.0"